--- a/microservice-product.properties
+++ b/microservice-product.properties
@@ -6,3 +6,4 @@ spring.h2.console.enabled=true
 spring.datasource.sql-script-encoding=UTF-8
 #configuration
 mes-configs.limitDeProduits=3
+management.endpoints.web.exposure.include=*
