--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,2 +1,5 @@
 server.port=9004
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+#Spring security
+spring.security.user.name=user
+spring.security.user.password=mdp
