--- a/microservice-product.properties
+++ b/microservice-product.properties
@@ -4,5 +4,6 @@ spring.h2.console.enabled=true
 #dÃ©fini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
 #configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 mes-configs.limitDeProduits=2
 management.endpoints.web.exposure.include=*
